Fixed text align

--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ body > table > tbody > tr > td {
 
 #content {
     position: relative;
+    text-align: center;
     padding: 30px 50px 50px 50px;
     margin: 20px auto;
     width: auto;
@@ -250,6 +251,7 @@ div.button:hover {
     padding: 10px 10px 5px 10px;
     text-shadow: 0 1px 1px rgba(120, 120, 130, 0.7);
     color: #FFFFFF;
+    text-align: left;
 }
 
 #content.notable h1, #content.notable h2 {
